[gd_scene load_steps=3 format=3 uid="uid://6rs6rw3sexmm"]

[ext_resource type="Script" path="res://energy_plant.gd" id="1_fh0s8"]
[ext_resource type="Texture2D" uid="uid://dss7fnknoqxtk" path="res://Buildings/barn_red_a.png" id="1_ne8ht"]

[node name="EnergyPlant" type="Node2D"]
script = ExtResource("1_fh0s8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ne8ht")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-7, 48, -83, 4, -7, -39, 74, 2)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -57.0
offset_top = 41.0
offset_right = 43.0
offset_bottom = 69.0
color = Color(0.109804, 0.0705882, 0.25098, 0.74902)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 99.0
offset_bottom = 26.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = -72.0
offset_top = -134.0
offset_right = 34.0
offset_bottom = -67.0

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 6.0
offset_right = 107.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Energy :
Cost :"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 65.0
offset_top = 10.0
offset_right = 105.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Label3" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 57.0
offset_top = 37.0
offset_right = 97.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
